--- a/Server/package.json
+++ b/Server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start":"node index.js",
-    "server":"nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
-    "otp-genrator": "^1.0.1"
+    "otp-genrator": "^1.0.1",
+    "razorpay": "^2.9.6"
   }
 }
