--- a/Server/package.json
+++ b/Server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
     "otp-genrator": "^1.0.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
